--- a/style.css
+++ b/style.css
@@ -56,13 +56,18 @@ body, html {
   /* Footer */
   
     .footer {
-    width: 100%;
-    background-color: #ff9999;
-    margin-top: auto;
-    display:flex;
-    justify-content:space-evenly;
-    padding-bottom:2%;
-    padding-top:5%;
+      width: 100%;
+      height: 5vh;
+      background-color: #ff9999;
+      margin-top: auto;
+      display: flex;
+      justify-content: space-evenly;
+      /* padding-bottom: 2%; */
+      padding-top: auto;
+      padding: 20px;
+      bottom: 0;
+      align-items: center;
+      align-content: center;
   }
   
   
@@ -100,9 +105,7 @@ body, html {
 /* mobile  */
   
   @media (min-width:320px){
-    .footer{
-      height: 100px;
-    }
+   
     .mynav ul{
   
       display: flex;
